--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,8 @@ name = "garden"
 path = "src/main.rs"
 
 [dependencies]
+color-eyre = "0.6.0"
+structopt = "0.3.26"
+
+[dev-dependencies]
+assert_cmd = "2.0.4"
