--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ path = "src/lib.rs"
 [dependencies]
 color-eyre = "0.6.0"
 directories = "4.0.1"
+edit = "0.1.3"
 structopt = "0.3.26"
 
 [dev-dependencies]
