Confirm and prompt file name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ path = "src/lib.rs"
 color-eyre = "0.6.0"
 directories = "4.0.1"
 edit = "0.1.3"
+rprompt = "1.0.5"
+slug = "0.1.4"
 structopt = "0.3.26"
 
 [dev-dependencies]
